--- a/public/signup.html
+++ b/public/signup.html
@@ -8,27 +8,27 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/signupStyle.css">
     <script src="scripts/avoidFlickering.js"></script>
+    <script src="./scripts/signup.js"></script>
 </head>
 <body>
     
-    <form id="signupInput"><br>
+    <form id="signupInput" onsubmit="cadastro()"><br>
         <h1>Sign Up</h1><br>
 
         <label for="">E-mail</label>
         <input id="emailInput" type="email" required>
-        <i id="warningText">Já existe uma conta com esse E-mail</i><br>
         <label for="">Nome</label>
         <input id="nameInput" type="text" required><br>
         <label for="">Username</label>
         <input id="usernameInput" type="text" required>
-        <i id="warningText">Já existe uma conta com esse Username</i><br>
         <label for="">Senha</label>
         <input id="passwordInput" type="password" required><br>
         <label for="">Confirmar senha</label>
-        <input id="passwordInput" type="password" required>
-        <i id="warningText">As senhas não coincidem</i><br>
+        <input style="height:35px;border-radius:10px;font-size:20px" id="password2Input" type="password" required><br>
         <input id="resetBtn" type="reset" >
+
         <input id="submitBtn" type="submit">
+
         <p style="font-size:20px;">Já possui uma conta? <a href="app.html" style="color:var(--main-brand)">Faça Login</a></p><br><br>
     </form>
 
