--- a/public/app.html
+++ b/public/app.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/appStyle.css">
     <link rel="icon" href="images/logoIconWithoutBackground.png">
     <script src="scripts/avoidFlickering.js"></script>
+    <script src="./scripts/redirectToUserPage.js"></script>
 </head>
 <body>
 
@@ -43,7 +44,6 @@
         <a href="user.html"><button><img src="images/noUserImage.png" id="iconUser"></button></a>
     </div>
     </header>
-
 
     <button id="buttonDrafts" onclick="abrirDraft()"> <img src="images/Drafts.png" id="drafts"> </button>
     
