Adicionar pesquisa por post e iniciar sistema de interações de post

--- a/public/app.html
+++ b/public/app.html
@@ -35,8 +35,8 @@
 
         <div class="input-box" id="search">
             <i class="uil uil-search"></i>
-            <input type="text" placeholder="Search here..." />
-            <button class="button">Search</button>
+            <input type="text" placeholder="Search here..." id="searchContent"/>
+            <button class="button" onclick="search()">Search</button>
           </div>
 
         <div id="botões">
@@ -88,37 +88,6 @@
         <article id="boxPosts">
             <h1>Resultados</h1> <br>
 
-
-
-            <div class="postResult">
-                <div class="static">
-                <div class="interações">
-                    <div class="curtidas">
-                        <span id="quantasCurtidas">0413</span> 
-                        <button id="like"> <img src="images/setaCima.png">  </button>
-                        <button id="dislike"> <img src="images/setaBaixo.png"> </button>
-                    </div>
-                    <button id="report" onclick="reportar()"> <img src="images/report.png"> </button>
-                </div>
-            </div>
-                <div class="capa"></div>
-
-                <a href="#"><h1>A Post</h1></a>
-                <i>By <a href="#">Ion Mateus</a></i>
-
-                <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolo...
-
-                </p>
-
-                <b>
-                    <a href="#">Programming</a> |
-                    <a href="#">C++</a> |
-                    <a href="#">Google</a> |
-                    <a href="#">Java</a>
-                </b>
-
-            </div> 
 
         </article>
 
