--- a/public/user.html
+++ b/public/user.html
@@ -10,6 +10,7 @@
     <title>User Page</title>
 
     <link rel="stylesheet" href="styles/estiloUser.css">
+    <link rel="stylesheet" href="styles/boxes.css">
     <link rel="stylesheet" href="styles/styleGenerico.css">
 
     <script src="scripts/avoidFlickering.js"></script>
@@ -211,6 +212,14 @@
             </div>
         </aside>
     </div>
+
+    <section id="box" class="confirmarDenuncia">
+        <h1>Confirmar denúncia</h1>
+        <p>Deseja denunciar o post de <a href="#">Usuário</a>? </p>
+        <button onclick="confirmarDenuncia()" id="ConfirmarButton">Confirmar</button>
+        <button onclick="fecharDenuncia()"  id="RetornarButton">Retornar</button>
+        <button id="exitLogin" onclick="fecharDenuncia()">X</button>
+</section>
     
     <script src="./scripts/changeTheme.js"></script>
     <script src="./scripts/userSelectedButton.js"></script>
