Adicionar várias mudanças pequenas para melhoria da qualidade

--- a/public/configurations.html
+++ b/public/configurations.html
@@ -80,12 +80,21 @@
     <section class="Extra">
         <h1 id="tituloExtra">Extra</h1>
         <li class="TituloMobile MobileExtra" onclick="retornar()"><h1> <img src="images/setaEsquerda.png"> Extra</h1></li>
+        <p>Oi :)</p>
     </section>
 
 
     <section class="FAQ">
         <h1 id="tituloFAQ">FAQ</h1>
         <li class="TituloMobile MobileFAQ" onclick="retornar()"><h1> <img src="images/setaEsquerda.png"> FAQ </h1></li>
+        <h2>Quais as técnologias utilizadas para fazer esse site?</h2>
+        <p><strong>Front-End: </strong> HTML, CSS, Javascript</p>
+        <p><strong>Back-End:</strong> Sql Server, NodeJS, Prisma</p>
+        <p><strong>APIs:</strong> Google Cloud Storage</p>
+        <br><br><br><br><br><br><br><br><br><br>
+        <h2>Como eu posso pedir uma mudança para esse site?</h2>
+        <p>Envie um e-mail para <a href="mailto: arthurgamajorgetec@gmail.com" target="_blank" rel="noreferrer noopener">arthurgamajorgetec@gmail.com</a>
+             ou para <a href="https://discord.com/users/659238913227096085" target="_blank" rel="noreferrer noopener">Ronin Kanmuri</a> no discord</p>
     </section>
 
 
