--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 
 <section class="sobre" id="sobre">
 
-<img src="images/DarkIcon.png" id="ImagemCentral">
+<img src="images/coding.png" id="ImagemCentral">
 
 <div>
 <span> <h1>Sobre</h1> </span><br>
