Adicionar filtros por BD, corrigir denuncias e outras pequenas alterações

--- a/public/app.html
+++ b/public/app.html
@@ -66,23 +66,8 @@
 
     <div id="pageContent">
         <aside id="filter"> <br>
-            <h1>Filtro</h1><br>
+            <h1>Filtros</h1><br>
 
-
-            <input type="checkbox" style="scale:2;margin:20px"><label>Google</label><br>
-
-            <input type="checkbox" style="scale:2;margin:20px"><label>Microsoft</label><br>
-
-            <input type="checkbox" style="scale:2;margin:20px"><label>Node.JS</label><br>
-
-            <input type="checkbox" style="scale:2;margin:20px"><label>HTML</label><br>
-
-            <input type="checkbox" style="scale:2;margin:20px"><label>How to hack windows 7</label><br>
-
-            <br><br><br>
-            <footer>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil qui ex nemo sapiente quasi suscipit reiciendis obcaecati officiis, veritatis consequuntur culpa, fugit officia ipsam aspernatur ab ipsum molestiae rem facere.</p>
-            </footer>
         </aside>
 
         <article id="boxPosts">
@@ -100,7 +85,7 @@
     </div>
 
     <footer class="Bx bx-menu" id="ToolBar">
-        <p id="filtroFooter" onclick="toggleFooter()">Filtro</p>
+        <p id="filtroFooter" onclick="toggleFilter()">Filtro</p>
         <p id="rankFooter" onclick="toggleRank()">Ranking</p>
     </footer>
 
