--- a/public/configurations.html
+++ b/public/configurations.html
@@ -93,7 +93,7 @@
         <p><strong>APIs:</strong> Google Cloud Storage</p>
         <br><br><br><br><br><br><br><br><br><br>
         <h2>Como eu posso pedir uma mudança para esse site?</h2>
-        <p>Envie um e-mail para <a href="mailto: arthurgamajorgetec@gmail.com" target="_blank" rel="noreferrer noopener">arthurgamajorgetec@gmail.com</a>
+        <p>Envie uma mensagem para o e-mail <a href="mailto: arthurgamajorgetec@gmail.com" target="_blank" rel="noreferrer noopener">arthurgamajorgetec@gmail.com</a>
              ou para <a href="https://discord.com/users/659238913227096085" target="_blank" rel="noreferrer noopener">Ronin Kanmuri</a> no discord</p>
     </section>
 
