--- a/public/app.html
+++ b/public/app.html
@@ -45,7 +45,7 @@
     </div>
     </header>
 
-    <button style="position: fixed;" id="buttonDrafts" onclick="abrirDraft()"> <img src="images/Drafts.png" id="drafts"> </button>
+    <button style="position: fixed;border:3px solid black" id="buttonDrafts" onclick="abrirDraft()"> <img src="images/Drafts.png" id="drafts"> </button>
     
     <div class="boxDraft" onclick="event.stopPropagation()">
         <div class="DraftsInfo">
