Adicionar pequenas mudanças

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 
 <section class="hero">
     <h1>Code&shyDrafts</h1> <br>
-    <p>Lorem Ipsum</p>
+    <p>O seu Lorem Ipsum</p>
 
     <br><br><br>
     <button onclick="window.location.href ='/app.html'" id="enterApp">Entre</button>
