--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,11 @@
 
     <script src="scripts/avoidFlickering.js"></script>
 </head>
-<body> 
+<body onclick="desativar()"> 
 
     <header>
         <a href="#" class="Principal"> <img src="images/iconWithTextLight.png" id="icone"> </a>
-        <ul class="Lista">
+        <ul class="Lista" onclick='event.stopPropagation()'>
             <li> <a href="app.html" id="aHover">App</a> </li>
             <li> <a href="#sobre" id="aHover">Sobre</a> </li>
             <li> <a href="#equipe" id="aHover">Equipe</a> </li>
