--- a/public/app.html
+++ b/public/app.html
@@ -12,6 +12,7 @@
     <link rel="icon" href="images/logoIconWithoutBackground.png">
     <script src="scripts/avoidFlickering.js"></script>
     <script src="./scripts/redirectToUserPage.js"></script>
+    <script src="./scripts/Postar.js"></script>
 </head>
 <body>
 
@@ -47,11 +48,12 @@
     </header>
 
     <button style="position: fixed;border:3px solid black" id="buttonDrafts" onclick="abrirDraft()"> <img src="images/Drafts.png" id="drafts"> </button>
+
     
     <div class="boxDraft" onclick="event.stopPropagation()">
         <div class="DraftsInfo">
             <img src="images/noUserImage.png"> <br>
-            <div class="textarea" contenteditable="true" placeholder="O que você deseja escrever?"></div>
+            <div id="postContent" class="textarea" contenteditable="true" placeholder="O que você deseja escrever?"></div>
         </div>
         <img src="" id="capa">
         <div class="botões">
@@ -60,7 +62,7 @@
             <button class="button icones" id="italic_button"> <img src="images/Italic-icon.png"> </button>
             <button class="button icones" id="underline_button"> <img src="images/Underline-icon.png"> </button>
 
-            <button class="button Analise">Enviar para análise</button>
+            <button onclick="Postar()" class="button Analise">Postar</button>
         </div>
     </div>
 
