--- a/public/app.html
+++ b/public/app.html
@@ -49,12 +49,18 @@
     <button style="position: fixed;border:3px solid black" id="buttonDrafts" onclick="abrirDraft()"> <img src="images/Drafts.png" id="drafts"> </button>
     
     <div class="boxDraft" onclick="event.stopPropagation()">
+        <div class="titulo"><input placeholder="titulo" id="inputTitulo"></div>
         <div class="DraftsInfo">
-            <img src="images/noUserImage.png"> <br>
+            <img src="images/noUserImage.png" id="draftsUserIcon"> <br>
             <div class="textarea" contenteditable="true" placeholder="O que você deseja escrever?"></div>
         </div>
-        <img src="" id="capa">
+        <div class="boxTopicos">
+            <select id="SelectTopicos"> </select>
+            <button onclick="AdicionarTopico()" id="topicoButton">Adicionar</button>
+            <div class="Tópicos"></div>
+        </div>
         <div class="botões">
+            <img src="" id="capa">
             <button class="button extra icones" onclick="openFile('capa')"> <img src="images/img-icon.png"></button>
             <button class="button icones" id="bold_button"> <img src="images/Bold-icon.png"> </button>
             <button class="button icones" id="italic_button"> <img src="images/Italic-icon.png"> </button>
