--- a/public/user.html
+++ b/public/user.html
@@ -112,7 +112,7 @@
         <button onclick="fecharDenuncia()"  id="RetornarButton">Retornar</button>
         <button id="exitLogin" onclick="fecharDenuncia()">X</button>
 </section>
-<p id="tema"></p>
+<img id="tema" src="images/DarkIcon.png" style="display: none">
     
     <script src="./scripts/changeTheme.js"></script>
     <script src="./scripts/userSelectedButton.js"></script>
