--- a/public/post.html
+++ b/public/post.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Post</title>
 
-    <link rel="stylesheet" href="styles/searchbar.css">
     <link rel="stylesheet" type="text/css" href="styles/postStyle.css">
     <link rel="icon" href="images/logoIconWithoutBackground.png">
     <script src="scripts/avoidFlickering.js"></script>
@@ -14,25 +13,71 @@
 
 </head>
 <body>
-    <header>
-        <div id="divIcone">
-        <a href="index.html"><img src="images/iconWithTextLight.png" id="icone"></a>
+    <div id="centro">
+        <div id="boxPost">
+
+            <div id="divCapa"></div>
+
+            <div id="informacoesPost">
+                <div id="tituloContainer">
+                    <h1 id="titulo">jjhvhv</h1>
+                </div>
+
+                <div id="informacoesUser" class="informacoes">
+                    <div id="boxAutorAvatar">
+                        <img class="avatar" src="">
+                    </div>
+
+                    <div class="containerNome">
+                        <p id="nomeAutorPost">autor</p>
+                    </div>
+                </div>
+            </div>
+
+            <div id="boxTexto">
+                <p id="texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam consectetur dolor fugit architecto quia, quod ea recusandae. Quibusdam ratione, accusamus atque, perspiciatis labore, repellendus voluptatibus laudantium nobis ipsum culpa dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores velit in officiis, distinctio dolorem aliquam, tempora, neque amet officia eius iste. Praesentium aut debitis at dolor nihil nostrum quas voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis consectetur ipsa, enim velit provident molestiae qui ex harum similique doloremque dolorem quidem fugit eligendi illum magni ullam tenetur perferendis quae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio reiciendis laborum earum quae rerum at saepe itaque nulla dicta harum, maiores inventore, voluptatum esse. Maiores facere pariatur ducimus atque blanditiis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur iste nesciunt non animi, totam rem vel doloribus ea praesentium, labore dolores autem odit debitis reprehenderit sint dignissimos ut dolor hic. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut suscipit vero voluptatum quis soluta. Molestias rem voluptates voluptas suscipit sunt consectetur repellat quia facilis! Saepe veritatis iusto eligendi voluptatibus dolorum.</p>
+            </div>
         </div>
 
-        <div class="input-box" id="search">
-            <i class="uil uil-search"></i>
-            <input type="text" placeholder="Search here..." />
-            <button class="button">Search</button>
-          </div>
+        <div id="boxComentarios">
+            <div class="comentario">
+                <div class="informacoes">
+                    <div class="boxComentarioAvatar">
+                        <img class="avatar" src="">
+                    </div>
 
-        <div id="botões">
-        <a href="configurations.html"><button><img src="images/settings.png" id="settings"></button></a>
-        <a href="user.html"><button><img src="images/noUserImage.png" id="iconUser"></button></a>
+                    <div class="containerNome">
+                        <p class="nomeAutorComentario">autor</p>
+                    </div>
+                </div>
+
+                <div class="boxTextoComentario">
+                    <p class="textoComentario"></p>
+                </div>
+
+                <div class="BoxCurtidasComentario">
+
+                </div>
+            </div>
+
+
+
+            <div class="comentario">
+                <div class="informacoes">
+
+                </div>
+
+                <div class="textoComentario">
+
+                </div>
+
+                <div class="BoxCurtidas">
+
+                </div>
+            </div>
+        </div>
     </div>
-    </header>
 
-    <div id="central">
 
-    </div>
 </body>
 </html>
