terminar HTML da página de post, necessário adicionar curtidas e reportas nos posts e comentários

--- a/public/post.html
+++ b/public/post.html
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="boxTextoComentario">
-                    <p class="textoComentario"></p>
+                    <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae accusamus ad voluptas incidunt commodi repellat tempora amet eum obcaecati vero ducimus deleniti neque possimus repellendus, minima ea veritatis! Quibusdam, fugiat?</p>
                 </div>
 
                 <div class="BoxCurtidasComentario">
@@ -59,21 +59,27 @@
                 </div>
             </div>
 
-
-
             <div class="comentario">
                 <div class="informacoes">
+                    <div class="boxComentarioAvatar">
+                        <img class="avatar" src="">
+                    </div>
 
+                    <div class="containerNome">
+                        <p class="nomeAutorComentario">autor</p>
+                    </div>
                 </div>
 
-                <div class="textoComentario">
-
+                <div class="boxTextoComentario">
+                    <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae accusamus ad voluptas incidunt commodi repellat tempora amet eum obcaecati vero ducimus deleniti neque possimus repellendus, minima ea veritatis! Quibusdam, fugiat?</p>
                 </div>
 
-                <div class="BoxCurtidas">
-
+                <div class="BoxCurtidasComentario">
+                    
                 </div>
             </div>
+
+
         </div>
     </div>
     <script src="scripts/changeTheme.js"></script>
