--- a/public/app.html
+++ b/public/app.html
@@ -54,7 +54,7 @@
         <div class="titulo"><input placeholder="titulo" id="inputTitulo"></div>
         <div class="DraftsInfo">
             <img src="images/noUserImage.png" id="draftsUserIcon"> <br>
-            <div class="textarea" contenteditable="true" placeholder="O que você deseja escrever?"></div>
+            <div id="postContent" class="textarea" contenteditable="true" placeholder="O que você deseja escrever?"></div>
 
         </div>
         <div class="boxTopicos">
