--- a/public/configurations.html
+++ b/public/configurations.html
@@ -68,8 +68,12 @@
                 </div>
 
                 <label>E-mail</label> <br>
-                <input type="email" placeholder="E-mail" disabled id="email"> <button onclick="LiberarEscrita('email')">Editar</button> <br><br><br>
+                <input type="email" placeholder="E-mail" disabled id="email"> <button onclick="LiberarEscrita('email')">Editar</button> <br><br>
             
+                <label>Bio</label> <br>
+                <textarea disabled id="bio"></textarea> <br>
+                <button onclick="LiberarEscrita('bio')">Editar</button> <br><br><br>
+
                 <button id="Salvar" onclick="Salvar()">Salvar</button> <br>
             </div>
         </div>
