Estilizar melhor as páginas para mobile

--- a/public/user.html
+++ b/public/user.html
@@ -19,7 +19,7 @@
     <a class="botao" id="btnVoltar" href="app.html">Voltar</a>
 
    <header id="menuHeader">
-        <button class="headerButton" id="headerConfigs" onclick="Editar()" id="menuConfigs"><img src="images/settings.png"></button>
+        <button class="headerButton" id="headerConfigs" onclick="reportarUser()" id="menuConfigs"><img src="images/report.png"></button>
         <a class="headerButton" id="headerVoltar" href="app.html">Voltar</a>
    </header>
 
@@ -73,7 +73,6 @@
                     </div>
 
                     <div id="boxCbConquistas" class="boxCbs">
-                            <script>document.querySelector("#boxCbConquistas").appendChild(document.querySelector("#quadradoConquistas").cloneNode(true))</script>
                     </div>
 
                 </div>
