Impedir o uso de tags html em posts e corrigir triggers de conquistas

--- a/public/user.html
+++ b/public/user.html
@@ -120,6 +120,14 @@
     <button id="exitLogin" onclick="fecharDenuncia()">X</button>
 </section>
 
+<section id="box" class="confirmarDenuncia confirmarDeletarPost">
+    <h1>Confirmar Deleção</h1>
+    <p>Deseja realmente apagar seu post? </p>
+    <button onclick="confirmarDeleçãoPost()" id="ConfirmarButton">Confirmar</button>
+    <button onclick="fecharDeleção()"  id="RetornarButton">Retornar</button>
+    <button id="exitLogin" onclick="fecharDeleção()">X</button>
+</section>
+
 <img id="tema" src="images/DarkIcon.png" style="display: none">
     
     <script src="./scripts/changeTheme.js"></script>
