Ativar opção de desativar e excluir conta / Atualizar sp

--- a/public/app.html
+++ b/public/app.html
@@ -42,7 +42,7 @@
 
         <div id="botões">
             <a href="configurations.html"><button><img src="images/settings.png" id="settings"></button></a>
-            <a href="./user.html"><button><img src="images/noUserImage.png" id="iconUser"></button></a>
+            <a href="./user.html"><button onclick="verificar()"><img src="images/noUserImage.png" id="iconUser"></button></a>
         </div>
     </header>
 
