Melhorar responsividade das boxes

--- a/public/app.html
+++ b/public/app.html
@@ -50,6 +50,7 @@
 
     
     <div class="boxDraft" onclick="event.stopPropagation()">
+        <button onclick="abrirDraft()" id="fecharDraft">X</button>
         <div class="titulo"><input placeholder="titulo" id="inputTitulo"></div>
         <div class="DraftsInfo">
             <img src="images/noUserImage.png" id="draftsUserIcon"> <br>
