Corrigir procura por tópico e adicionar tópico de mais recentes

--- a/public/app.html
+++ b/public/app.html
@@ -77,7 +77,8 @@
     <div id="pageContent">
         <aside id="filter"> <br>
             <h1>Filtros</h1><br>
-
+            <input type="checkbox" oninput='search()' class='filtros' value="Recentes" id="Recentes"style="transform: scale(2); margin: 20px;">
+            <label><b>Mais recentes</b></label><br>
         </aside>
 
         <article id="boxPosts">
