--- a/public/app.html
+++ b/public/app.html
@@ -103,7 +103,7 @@
 <section id="box" class="confirmarDenuncia">
         <h1>Confirmar denúncia</h1>
         <p>Deseja denunciar o post desse usuário? </p>
-        <button onclick="confirmarDenuncia()" id="ConfirmarButton">Confirmar</button>
+        <button onclick="confirmarDenuncia('post')" id="ConfirmarButton">Confirmar</button>
         <button onclick="fecharDenuncia()"  id="RetornarButton">Retornar</button>
         <button id="exitLogin" onclick="fecharDenuncia()">X</button>
 </section>
@@ -111,7 +111,7 @@
 <section id="box" class="confirmarDenuncia confirmarDeletarPost">
     <h1>Confirmar Deleção</h1>
     <p>Deseja realmente apagar seu post? </p>
-    <button onclick="confirmarDeleçãoPost()" id="ConfirmarButton">Confirmar</button>
+    <button onclick="confirmarDeleção('post')" id="ConfirmarButton">Confirmar</button>
     <button onclick="fecharDeleção()"  id="RetornarButton">Retornar</button>
     <button id="exitLogin" onclick="fecharDeleção()">X</button>
 </section>
