--- a/public/user.html
+++ b/public/user.html
@@ -53,12 +53,15 @@
                 <div id="boxCbPosts">
                     <div id="divContentButtons">
                         <button onclick="selecionar(`Posts`)" id="Posts" class="contentButton">Posts</button>
+                        <button onclick="selecionar(`Comentarios`)" id="Comentarios" class="contentButton">Comentários</button>
                         <button onclick="selecionar(`CbPessoal`)" id="CbPessoal" class="contentButton">Pessoal</button>
                         <button onclick="selecionar(`CbConquistas`)" id="CbConquistas" class="contentButton">Conquistas</button>
                     </div>
 
                     <div id="boxPosts" class="boxCbs">
                     </div>
+
+                    <div id="boxComentarios" class="boxCbs"></div>
 
                     <div id="boxCbPessoal" class="boxCbs">
                         <div id="boxCbPessoalRanking">
@@ -107,7 +110,15 @@
 <section id="box" class="confirmarDenuncia">
     <h1>Confirmar denúncia</h1>
     <p>Deseja denunciar o post desse usuário? </p>
-    <button onclick="confirmarDenuncia()" id="ConfirmarButton">Confirmar</button>
+    <button onclick="confirmarDenuncia('post')" id="ConfirmarButton">Confirmar</button>
+    <button onclick="fecharDenuncia()"  id="RetornarButton">Retornar</button>
+    <button id="exitLogin" onclick="fecharDenuncia()">X</button>
+</section>
+
+<section id="box" class="confirmarDenuncia denunciaComentario">
+    <h1>Confirmar denúncia</h1>
+    <p>Deseja denunciar o comentário desse usuário? </p>
+    <button onclick="confirmarDenuncia('comentario')" id="ConfirmarButton">Confirmar</button>
     <button onclick="fecharDenuncia()"  id="RetornarButton">Retornar</button>
     <button id="exitLogin" onclick="fecharDenuncia()">X</button>
 </section>
@@ -115,7 +126,7 @@
 <section id="box" class="confirmarDenuncia DenunciaUser">
     <h1>Confirmar denúncia</h1>
     <p>Deseja denunciar esse usuário? </p>
-    <button onclick="confirmarDenunciaUsuario()" id="ConfirmarButton">Confirmar</button>
+    <button onclick="confirmarDenuncia('usuario')" id="ConfirmarButton">Confirmar</button>
     <button onclick="fecharDenuncia()"  id="RetornarButton">Retornar</button>
     <button id="exitLogin" onclick="fecharDenuncia()">X</button>
 </section>
@@ -123,13 +134,22 @@
 <section id="box" class="confirmarDenuncia confirmarDeletarPost">
     <h1>Confirmar Deleção</h1>
     <p>Deseja realmente apagar seu post? </p>
-    <button onclick="confirmarDeleçãoPost()" id="ConfirmarButton">Confirmar</button>
+    <button onclick="confirmarDeleção('post')" id="ConfirmarButton">Confirmar</button>
+    <button onclick="fecharDeleção()"  id="RetornarButton">Retornar</button>
+    <button id="exitLogin" onclick="fecharDeleção()">X</button>
+</section>
+
+<section id="box" class="confirmarDenuncia confirmarDeletarComentario">
+    <h1>Confirmar Deleção</h1>
+    <p>Deseja realmente apagar seu comentário? </p>
+    <button onclick="confirmarDeleção('comentario')" id="ConfirmarButton">Confirmar</button>
     <button onclick="fecharDeleção()"  id="RetornarButton">Retornar</button>
     <button id="exitLogin" onclick="fecharDeleção()">X</button>
 </section>
 
 <img id="tema" src="images/DarkIcon.png" style="display: none">
     
+    <script src="./scripts/coment.js"></script>
     <script src="./scripts/changeTheme.js"></script>
     <script src="./scripts/userSelectedButton.js"></script>
     <script src="./scripts/scriptUser.js"></script>
