Corrigir labels java

--- a/public/signup.html
+++ b/public/signup.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/logoIconWithoutBackground.png">
-    <title>Document</title>
+    <title>Cadastro</title>
     <link rel="stylesheet" href="styles/signupStyle.css">
     <script src="scripts/avoidFlickering.js"></script>
     <script src="./scripts/signup.js"></script>
