Adicionar tab de comentários

--- a/public/app.html
+++ b/public/app.html
@@ -69,7 +69,7 @@
             <button class="button icones" id="italic_button"> <img src="images/Italic-icon.png"> </button>
             <button class="button icones" id="underline_button"> <img src="images/Underline-icon.png"> </button>
 
-            <button onclick="Postar()" class="button Analise">Postar</button>
+            <button onclick="Publicar()" class="button Analise">Postar</button>
         </div>
     </div>
 
