--- a/public/configurations.html
+++ b/public/configurations.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="images/logoIconWithoutBackground.png">
     <script src="scripts/avoidFlickering.js"></script>
 </head>
-<body onresize="retornar()">
+<body>
 
     <section class="navbarLateral">
         <ul>
